--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ nav{
 .links ul li a:hover {
     color: black;
 }
-.main{
+/* .main{
     width: 100%;
     height: 78.5vh;
     padding-left: 41%;
@@ -66,7 +66,7 @@ nav{
     color: white;
     font-family: "Readex Pro", sans-serif;
     font-optical-sizing: auto;
-}
+} */
 .main-btn{
     width: 180px;
     height: 40px;
